--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <title>tree-logo</title>
   </head>
   <body>
     <div id="app">
       <p>..</p>
     </div>
-    <script src="js/compiled/tree_logo.js" type="text/javascript"></script>
+    <script src="js/tree_logo.js" type="text/javascript"></script>
   </body>
 </html>
